--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="N-Gage.games" />
+    <meta property="og:title" content="Nokia N-Gage" />
     <meta property="og:type" content="blog" />
     <meta property="og:url" content="https://n-gage.games" />
     <meta property="og:image" content="https://n-gage.games/img/1200x630_A.jpg" />
 
-    <title>N-Gage.games</title>
+    <title>Nokia N-Gage</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
@@ -18,6 +18,6 @@
     <link rel="manifest" href="/site.webmanifest?v=2">
   </head>
 
-  <body>
+  <body id="comingsoon">
   </body>
 </html>
